header-menu was ended

--- a/stylesheets/sass/base/_base.scss
+++ b/stylesheets/sass/base/_base.scss
@@ -4,8 +4,9 @@ body{
     font-family: 'Poppins', 'Arial', sans-serif;
 }
 .container{
-    display: flex;
-    max-width: 1320px;
+    max-width: 1350px;
     margin-left: auto;
     margin-right: auto;
+    padding-right: 15px;
+    padding-left: 15px;
 }
