--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,19 +1,68 @@
-@import url(./normalize.css);
+@import "./normalize.css";
 body {
   background-image: url("./images/background.png");
   background-repeat: no-repeat;
-  font-family: 'Poppins', 'Arial', sans-serif; }
+  font-family: "Poppins", "Arial", sans-serif;
+}
 
 .container {
-  display: flex;
-  max-width: 1320px;
+  max-width: 1350px;
   margin-left: auto;
-  margin-right: auto; }
+  margin-right: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+.navigation {
+  padding-top: 20px;
+  padding-bottom: 115px;
+}
+
+.nav-row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 .logo-text {
   font-weight: 600;
   font-size: 36px;
   color: white;
-  text-decoration: none; }
+  text-decoration: none;
+}
+
+.nav-list .nav-list-container {
+  display: flex;
+}
+.nav-list ul {
+  display: flex;
+  list-style-type: none;
+}
+.nav-list li {
+  margin-right: 42px;
+}
+.nav-list a {
+  font-size: 16px;
+  text-decoration: none;
+  color: white;
+}
+.nav-list a:hover {
+  color: #FFC814;
+  font-weight: 600;
+}
+.nav-list button {
+  font-weight: 600;
+  background-color: #FFC814;
+  border: none;
+  border-radius: 4px;
+  padding: 16px 47px 16px 47px;
+  text-align: center;
+  color: #1F3347;
+  cursor: pointer;
+}
+.nav-list button:hover {
+  background-color: #1F3347;
+  color: #FFC814;
+}
 
 /*# sourceMappingURL=index.css.map */
