--- a/stylesheets/sass/blocks/_nav.scss
+++ b/stylesheets/sass/blocks/_nav.scss
@@ -1,3 +1,13 @@
+.navigation{
+    padding-top: 20px;
+    padding-bottom: 115px;
+}
+
+.nav-row{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
 .logo-text{
     font-weight: 600;
     font-size: 36px;
