--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -1,8 +1,10 @@
 @import "./normalize.css";
 body {
   background-image: url("./images/background.png");
+  background-size: 100% auto;
   background-repeat: no-repeat;
   font-family: "Poppins", "Arial", sans-serif;
+  font-size: 16px;
 }
 
 .container {
@@ -13,9 +15,28 @@ body {
   padding-left: 15px;
 }
 
+ul {
+  list-style-type: none;
+}
+
+button {
+  font-weight: 600;
+  background-color: #FFC814;
+  border: none;
+  border-radius: 4px;
+  padding: 16px 47px 16px 47px;
+  text-align: center;
+  color: #1F3347;
+  cursor: pointer;
+}
+button:hover {
+  background-color: #1F3347;
+  color: #FFC814;
+}
+
 .navigation {
   padding-top: 20px;
-  padding-bottom: 115px;
+  padding-bottom: 60px;
 }
 
 .nav-row {
@@ -36,7 +57,6 @@ body {
 }
 .nav-list ul {
   display: flex;
-  list-style-type: none;
 }
 .nav-list li {
   margin-right: 42px;
@@ -50,19 +70,106 @@ body {
   color: #FFC814;
   font-weight: 600;
 }
-.nav-list button {
-  font-weight: 600;
+
+.content-wrapper {
+  max-width: 570px;
+  margin-right: auto;
+}
+.content-wrapper h1 {
+  font-weight: 700;
+  font-size: 64px;
+  color: white;
+}
+.content-wrapper p {
+  margin-top: 17px;
+  margin-bottom: 37px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 30px;
+  color: white;
+}
+.content-wrapper .get-exploration-btn {
+  font-size: 16px;
+  line-height: 24px;
+  max-width: 160px;
+  max-height: 56px;
+  padding: 16px 18px;
+  margin-right: 20px;
+}
+.content-wrapper .read-more-btn {
+  background-color: white;
+  font-size: 16px;
+  line-height: 24px;
+  max-width: 160px;
+  max-height: 56px;
+  padding: 16px 36px;
+}
+.content-wrapper .read-more-btn:hover {
+  background-color: #1F3347;
+  color: white;
+}
+
+.booking-tab {
+  margin-top: 185px;
+}
+.booking-tab ul {
+  display: inline-flex;
+  justify-content: space-between;
+  width: 510px;
+  margin: 0px;
+  padding: 0px;
+}
+.booking-tab li {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  background-color: white;
+  border-radius: 4px 4px 0px 0px;
+  padding: 8px 27px 8px 10px;
+}
+.booking-tab li:hover {
   background-color: #FFC814;
+}
+.booking-tab img {
+  margin-right: 11px;
+}
+.booking-tab a {
+  font-weight: 600;
+  text-decoration: none;
+  color: #22283C;
+}
+
+form {
+  background-color: white;
+  padding: 30px 38px;
+  box-shadow: 0 0 20px white;
+}
+form .form-container {
+  display: flex;
+  justify-content: space-between;
+}
+form h3 {
+  font-weight: 600;
+  font-size: 16px;
+  padding: 0;
+  margin: 0 0 7px 0;
+}
+form input {
+  padding: 0 0 0 10px;
+  width: 170px;
+  height: 56px;
   border: none;
   border-radius: 4px;
-  padding: 16px 47px 16px 47px;
-  text-align: center;
-  color: #1F3347;
-  cursor: pointer;
+  box-shadow: 0 0 20px #E4E2EE;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
-.nav-list button:hover {
-  background-color: #1F3347;
-  color: #FFC814;
+form .book-now-btn {
+  margin-top: 24px;
+  height: 56px;
+  box-shadow: 0 0 10px #FFC814;
+}
+form .book-now-btn:hover {
+  box-shadow: 0 0 10px #1F3347;
 }
 
 /*# sourceMappingURL=index.css.map */
