--- a/stylesheets/sass/base/_base.scss
+++ b/stylesheets/sass/base/_base.scss
@@ -1,7 +1,9 @@
 body{
     background-image:url("./images/background.png");
+    background-size: 100% auto;
     background-repeat: no-repeat;
     font-family: 'Poppins', 'Arial', sans-serif;
+    font-size: 16px;
 }
 .container{
     max-width: 1350px;
@@ -9,4 +11,22 @@ body{
     margin-right: auto;
     padding-right: 15px;
     padding-left: 15px;
+}
+ul{
+    list-style-type: none;
+}
+button{
+    font-weight: 600;
+    background-color: $accent-color;
+    border: none;
+    border-radius: 4px;
+    padding: 16px 47px 16px 47px;
+    text-align: center;
+    color: $accent-color-text;
+    cursor: pointer;
+
+    &:hover{
+        background-color: $accent-inverse-color;
+        color:$accent-color; 
+    }
 }
