--- a/stylesheets/sass/base/_base.scss
+++ b/stylesheets/sass/base/_base.scss
@@ -30,3 +30,11 @@ button{
         color:$accent-color; 
     }
 }
+h4{
+    font-family: 'Dancing Script', cursive;
+    color:$accent-color;
+    font-size: 24px;
+}
+h3{
+    font-size: 36px;
+}
