--- a/stylesheets/sass/index.scss
+++ b/stylesheets/sass/index.scss
@@ -1,5 +1,4 @@
 //Base
-@import "./normalize.css";
 @import "./base/vars";
 @import "./base/base";
 //Blocks
@@ -8,3 +7,5 @@
 @import "./blocks/intro-content";
 @import "./blocks/form-nav";
 @import "./blocks/form";
+@import "./blocks/images";
+@import "./blocks/about-us";
